2018-08-11  Kirit Saelensminde  <kirit@felspar.com>
 * Fix the order of the expected & actual results for object request.
 * Fix a bug in the HTTP request checking where expressions would be resolved twice.

2018-07-11  Tle Ekkul  <e.aryuth@gmail.com>
 Add fg quote function

2018-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Add support for `password` configuration on the connection strings.

2018-05-15  Kirit Saelensminde  <kirit@felspar.com>
 Allow database connection string settings to come from the environment.

2017-12-13  Kirit Saelensminde  <kirit@felspar.com>
 Fix the fg parser to allow whitspace and comments in more places.

2017-10-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add scripting call `setting` for manipulating settings.
 * Add parser support for all JSON atom values.

2017-09-25  Kirit Saelensminde  <kirit@felspar.com>
 Add RETURNING support to PUT request for objects.

2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Move some tests so Postgres is not needed for a normal build.

2017-05-03  Kirit Saelensminde  <kirit@felspar.com>
 Add -h and -U options to fostgres-test to control how to access the database.

2017-04-08  Kirit Saelensminde  <kirit@felspar.com>
 * Add a `json_recordset` adapter that allows rows to be dereferenced directly as objects.
 * Move the location of the `column_names` API to `fostgres-core`.

2017-02-18  Kirit Saelensminde  <kirit@felspar.com>
 Added support for file uploads. JSON base 64 encoded only.

2017-01-13  Kirit Saelensminde  <kirit@felspar.com>
 Update for new internal structure of `fostlib::json`.

2017-01-12  Kirit Saelensminde  <kirit@felspar.com>
 Removed the old `parser_lock` which is no longer needed.

2017-01-11  Kirit Saelensminde  <kirit@felspar.com>
 Fix the matcher so it properly decodes the file spec parts from their URL encoding.

2017-01-03  Kirit Saelensminde  <kirit@felspar.com>
 Switch to the new version of Boost Spirit. Drop support for Boost version prior to !.59.
